# glance

./: .gitignore  MARKETING.md  PUBLISHING.md  Pre-Release Checklist.md  README.md  SUMMARY.md  TEST.md  index.html  marketing_strategy.md  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  resize_icon.cjs  vite.config.ts  vitest.behavior.config.ts  wrangler.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cloudflare-worker/: README.md  glance-payments-worker.js  glance-payments-worker.test.js
cloudflare-worker/migrations/: 001_checkout_transactions.sql
docs/: master-development-plan.md  phase-0-checklist.md  phase-1-checklist.md  risk-register.md
docs/testing/: behavioral-testing.md
landing-page/: GLANCE.webm  docs-sections-jump.webm  docs.html  docs.md  glance-apple-promo-final-webm.webm  glance-demo.webm  guides.html  guides.md  index.html  index.md  privacy.html  privacy.md  refund.html  refund.md  robots.txt  sitemap.xml  terms.html  terms.md  update-ph.json  update.json
landing-page/assets/: release-config-ph.js  release-config.js
landing-page/guides/: index.html  index.md
landing-page/guides/read-notes-without-looking-down-zoom/: index.html  index.md
landing-page/script-template/: index.html  index.md
landing-page/zoom-teleprompter/: index.html  index.md
netlify/edge-functions/: accept-markdown.js
scripts/: env-loader.mjs  i18n-audit.mjs  release-ph.mjs  release.mjs  run-tauri-build.mjs  run-web-build.mjs  update-release-config.mjs
scripts/generate_keys/: Cargo.toml
scripts/generate_keys/src/: main.rs
src/: App.test.tsx  App.tsx  app.css  constants.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.product-hunt.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: LicenseBridge.swift
src-tauri/src/: commands.rs  license.rs  macos_permissions.rs  main.rs  offline_license.rs  sessions.rs
src-tauri/tests/: runtime_contract.rs  runtime_monitor_fallback.rs  runtime_session_restore.rs  runtime_visibility_shortcut.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: SplashScreen.tsx  editor-view.test.tsx  editor-view.tsx  help-view.test.tsx  help-view.tsx  library-view.test.tsx  library-view.tsx  license-gate.test.tsx  license-gate.tsx  overlay-prompter.test.tsx  overlay-prompter.tsx  paywall.tsx  privacy-gate.test.tsx  privacy-gate.tsx  react-view-transition.tsx  settings-license-card.tsx  settings-view.test.tsx  settings-view.tsx  shortcut-keycaps.tsx
src/contexts/: SplashContext.tsx
src/hooks/: useAppLicense.test.tsx  useAppLicense.ts  useAppReady.ts  useVoiceActivity.test.tsx  useVoiceActivity.ts
src/i18n/: languages.ts  resolve-language.test.ts  resolve-language.ts  types.ts  use-i18n.test.ts  use-i18n.ts
src/lib/: build-channel.ts  license-api.test.ts  license-api.ts  markdown.test.ts  markdown.ts  sample-session.ts  scroll-engine.test.ts  scroll-engine.ts  shortcuts.test.ts  shortcuts.ts  tauri.test.ts  tauri.ts  voice-activity.test.ts  voice-activity.ts
src/store/: use-app-store.test.ts  use-app-store.ts
src/test/: setup.ts
(+28 files in other folders)
