[package]
name = "glance"
version = "0.3.8-1"
description = "Glance local-only teleprompter"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-shell = "2.0.0-rc.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
zip = "4.2.0"
base64 = "0.22.1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Foundation",
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_Security"
] }


[dependencies.ed25519-dalek]
version = "2.1.1"

[dev-dependencies]
tempfile = "3.26.0"
