[package]
name = "generate_keys"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
hex = "0.4.3"
